[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Dialogs/ImageEffects/DesaturateDialog.gd" type="Script" id=1]
[ext_resource path="res://src/UI/TransparentChecker.tscn" type="PackedScene" id=2]

[node name="DesaturateDialog" type="ConfirmationDialog"]
margin_right = 294.0
margin_bottom = 376.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Desaturation"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 286.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer"]
margin_right = 278.0
margin_bottom = 200.0
size_flags_vertical = 3

[node name="Preview" type="TextureRect" parent="VBoxContainer/AspectRatioContainer"]
margin_left = 39.0
margin_right = 239.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
expand = true
stretch_mode = 5

[node name="TransparentChecker" parent="VBoxContainer/AspectRatioContainer/Preview" instance=ExtResource( 2 )]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 278.0
margin_bottom = 332.0

[node name="ColorWidget" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
margin_right = 278.0
margin_bottom = 20.0
size_flags_vertical = 0

[node name="ColorLabel" type="Label" parent="VBoxContainer/OptionsContainer/ColorWidget"]
margin_top = 3.0
margin_right = 44.0
margin_bottom = 17.0
text = "Colors:"

[node name="OriginColorPicker" type="ColorPickerButton" parent="VBoxContainer/OptionsContainer/ColorWidget"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
mouse_default_cursor_shape = 2

[node name="DestColorPicker" type="ColorPickerButton" parent="VBoxContainer/OptionsContainer/ColorWidget"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )
mouse_default_cursor_shape = 2
color = Color( 1, 1, 1, 1 )

[node name="LevelsWidget" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
margin_top = 24.0
margin_right = 278.0
margin_bottom = 48.0
size_flags_vertical = 0

[node name="LevelsLabel" type="Label" parent="VBoxContainer/OptionsContainer/LevelsWidget"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Levels:"

[node name="LevelsSpinBox" type="SpinBox" parent="VBoxContainer/OptionsContainer/LevelsWidget"]
margin_left = 49.0
margin_right = 123.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
max_value = 128.0

[node name="PercentWidget" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
margin_top = 52.0
margin_right = 278.0
margin_bottom = 76.0
size_flags_vertical = 0

[node name="PercentLabel" type="Label" parent="VBoxContainer/OptionsContainer/PercentWidget"]
margin_top = 5.0
margin_right = 53.0
margin_bottom = 19.0
text = "Percent:"

[node name="PercentSpinBox" type="SpinBox" parent="VBoxContainer/OptionsContainer/PercentWidget"]
margin_left = 57.0
margin_right = 131.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
value = 100.0

[node name="MethodWidget" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
margin_top = 80.0
margin_right = 278.0
margin_bottom = 100.0
size_flags_vertical = 0

[node name="MethodLabel" type="Label" parent="VBoxContainer/OptionsContainer/MethodWidget"]
margin_top = 3.0
margin_right = 53.0
margin_bottom = 17.0
text = "Method:"

[node name="MethodComboBox" type="OptionButton" parent="VBoxContainer/OptionsContainer/MethodWidget"]
margin_left = 57.0
margin_right = 156.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Luminance"
items = [ "Luminance", null, false, 0, null, "Average", null, false, 1, null, "HSL", null, false, 2, null, "HSV", null, false, 3, null ]
selected = 0

[node name="SelectionWidget" type="HBoxContainer" parent="VBoxContainer/OptionsContainer"]
margin_top = 104.0
margin_right = 278.0
margin_bottom = 128.0
size_flags_horizontal = 5
size_flags_vertical = 0

[node name="SelectionCheckBox" type="CheckBox" parent="VBoxContainer/OptionsContainer/SelectionWidget"]
margin_left = -5.0
margin_right = 155.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
pressed = true
text = "Only affect selection"

[node name="AffectOptionButton" type="OptionButton" parent="VBoxContainer/OptionsContainer/SelectionWidget"]
margin_left = 164.0
margin_right = 278.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
text = "Selected cels"
items = [ "Selected cels", null, false, 0, null, "Current frame", null, false, 1, null, "All frames", null, false, 2, null, "All projects", null, false, 3, null ]
selected = 0

[connection signal="color_changed" from="VBoxContainer/OptionsContainer/ColorWidget/OriginColorPicker" to="." method="_on_OriginColorPicker_color_changed"]
[connection signal="color_changed" from="VBoxContainer/OptionsContainer/ColorWidget/DestColorPicker" to="." method="_on_DestColorPicker_color_changed"]
[connection signal="value_changed" from="VBoxContainer/OptionsContainer/LevelsWidget/LevelsSpinBox" to="." method="_on_LevelsSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/OptionsContainer/PercentWidget/PercentSpinBox" to="." method="_on_PercentSpinBox_value_changed"]
[connection signal="item_selected" from="VBoxContainer/OptionsContainer/MethodWidget/MethodComboBox" to="." method="_on_MethodComboBox_item_selected"]
